--- a/.gitea/workflows/check.yml
+++ b/.gitea/workflows/check.yml
@@ -8,6 +8,6 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v24
+      - uses: https://github.com/actions/checkout@v4
+      - uses: https://github.com/cachix/install-nix-action@v24
       - run: nix flake check .
