--- a/.gitea/workflows/check.yml
+++ b/.gitea/workflows/check.yml
@@ -7,10 +7,10 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    shell: bash
     steps:
+      - name: Install sudo package
+        run: apt update && apt install sudo
       - uses: https://github.com/actions/checkout@v4
       - uses: https://github.com/cachix/install-nix-action@v27
-        with:
-          enable_kvm: false
-          install_options: --no-daemon
       - run: nix flake check .
