--- a/.gitea/workflows/check.yml
+++ b/.gitea/workflows/check.yml
@@ -13,4 +13,5 @@ jobs:
         run: apt update && apt install sudo
       - uses: https://github.com/actions/checkout@v4
       - uses: https://github.com/cachix/install-nix-action@v27
-      - run: nix flake check .
+      - name: Check flake configuration
+        run: nix flake check
