--- a/.gitea/workflows/check.yml
+++ b/.gitea/workflows/check.yml
@@ -10,8 +10,11 @@ jobs:
     shell: bash
     steps:
       - name: Install sudo package
-        run: apt update && apt install sudo
+        run: apt update && apt install sudo jq
       - uses: https://github.com/actions/checkout@v4
       - uses: https://github.com/cachix/install-nix-action@v27
-      - name: Check flake configuration
-        run: nix flake check
+      - name: Show flake info
+        run: nix flake metadata && nix flake show
+      # Re-enable when https://github.com/NixOS/nix/issues/8621 is resolved
+      # - name: Check flake configuration
+      #   run: nix flake check
