--- a/.gitea/workflows/check.yml
+++ b/.gitea/workflows/check.yml
@@ -10,7 +10,7 @@ jobs:
     shell: bash
     steps:
       - name: Install sudo package
-        run: apt update && apt install sudo jq
+        run: apt update && apt install sudo jq -y
       - uses: https://github.com/actions/checkout@v4
       - uses: https://github.com/cachix/install-nix-action@v27
       - name: Show flake info
