tips(kdedev): Migrate to fedora latest and fix configure.sh

--- a/tips/distrobox/kde/distrobox.ini
+++ b/tips/distrobox/kde/distrobox.ini
@@ -1,5 +1,5 @@
 [kdedev]
-image=quay.io/fedora/fedora:rawhide
+image=quay.io/fedora/fedora:latest
 home="${HOME}/.distrobox_home/kdedev"
 nvidia=true
 root=false
